[package]
name = "archivoor-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = [
    "fetch",
] }
reqwest = "0.11.13"
signal-hook = "0.3.14"
clap = "4.0.32"
anyhow = "1.0.68"
arloader = "0.1.63"
