[package]
name = "archivoor-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = [
    "fetch",
] }
reqwest = "0.11.13"
signal-hook = "0.3.14"
clap = "4.0.32"
anyhow = "1.0.68"
arloader = "0.1.63"
sysinfo = "0.27.2"
thiserror = "1.0.38"
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
bundlr-sdk = { git = "https://github.com/Bundlr-Network/rust-sdk" }
