[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
headless_chrome = "1.0.5"
signal-hook = "0.3.14"
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.68"
sysinfo = "0.27.2"
thiserror = "1.0.38"
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
futures = "0.3"
serde_json = "1.0.91"
serde = "1.0.152"
redis = "0.22.2"
sha2 = "0.10.6"
base64 = "0.21.0"
derive_builder = "0.12.0"
rand = "0.8.5"
urlencoding = "2.1.2"
warp_dre = "1.0.1"
atw = { path = "../warp-contracts-rust/atw/contract/definition" }
arloader = "0.1.63"
cron = "0.12.0"
chrono = "0.4.23"
itertools = "0.10.5"
tokio-retry = "0.3.0"
lazy_static = "1.4.0"

[dev-dependencies]
tokio-test = "0.4.2"
