[package]
name = "warp_dre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.152"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
anyhow = "1.0.68"
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0.91"
serde = "1.0.152"
derive_builder = "0.12.0"
arloader = "0.1.63"

[dev-dependencies]
tokio-test = "0.4.2"
